Fix clean m2 repo full build

--- a/catalog/core/catalog-core-actions/pom.xml
+++ b/catalog/core/catalog-core-actions/pom.xml
@@ -45,9 +45,8 @@
             <version>${org.slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.platform</groupId>
-            <artifactId>platform-configuration</artifactId>
-            <version>${project.version}</version>
+            <groupId>ddf.lib</groupId>
+            <artifactId>common-system</artifactId>
         </dependency>
     </dependencies>
 </project>
