--- a/catalog/rest/catalog-rest-service/pom.xml
+++ b/catalog/rest/catalog-rest-service/pom.xml
@@ -42,8 +42,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.platform</groupId>
-            <artifactId>platform-configuration</artifactId>
+            <groupId>ddf.lib</groupId>
+            <artifactId>common-system</artifactId>
         </dependency>
         <dependency>
             <groupId>net.minidev</groupId>
