--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -105,32 +105,14 @@ solr.query.sort.caseInsensitive=true
 org.codice.ddf.system.threadPoolSize=128
 
 #
-# Security Manager Settings
+# Security properties
 #
-
+# To enable OSGi security, uncomment the properties below,
+# install the framework-security feature and restart.
 #
-# Admins can uncomment the following 6 lines and comment out the other definitions of
-# the security manager properties in order to determine any missing security permissions
-# should they install third-party bundles requiring additional access.
-#
-# Please note that turning on the PolicyFileGeneratorJSM has the side-effect of turning off
-# security on your system. It should be used with caution, only to ascertain missing
-# permissions to be added to the default.policy file.
-#
-# N.B. The use of the double equals on the 'java.security.policy' property is intentional.
-# See http://docs.oracle.com/javase/7/docs/technotes/guides/security/PolicyFiles.html#DefaultLocs
-# for more information.
-#
-# prograde.generated.policy=${karaf.home}/generated.policy
-# prograde.use.own.policy=true
-# policy.provider=net.sourceforge.prograde.policy.ProGradePolicy
-# java.security.manager=net.sourceforge.prograde.sm.PolicyFileGeneratorJSM
-# proGrade.getPermissions.override=sun.rmi.server.LoaderHandler:loadClass,org.apache.jasper.compiler.JspRuntimeContext:initSecurity
-
-# policy.provider=net.sourceforge.prograde.policy.ProGradePolicy
-# java.security.manager=net.sourceforge.prograde.sm.ProGradeJSM
-# java.security.policy==${karaf.etc}/all.policy
-# proGrade.getPermissions.override=sun.rmi.server.LoaderHandler:loadClass,org.apache.jasper.compiler.JspRuntimeContext:initSecurity
+#java.security.policy=${karaf.etc}/all.policy
+#org.osgi.framework.security=osgi
+#org.osgi.framework.trust.repositories=${karaf.etc}/trustStore.ks
 
 
 #
@@ -164,13 +146,6 @@ bad.mime.types=text/html,text/javascript,text/x-javascript,application/x-shellsc
 # Files uploaded matching these file names will be excluded from being stored
 ignore.files=.DS_Store,Thumbs.db
 
-#
-# Basic Authentication
-#
-
-# Set to true to allow Basic Auth credentials to be sent over HTTP unsecurely. This should only be
-# done in a test environment. These events will be audited.
-org.codice.allowBasicAuthOverHttp=false
 
 #
 # Auditing Settings
@@ -206,36 +181,16 @@ javax.xml.transform.TransformerFactory=org.apache.xalan.processor.TransformerFac
 org.codice.ddf.http.access.log.enabled=false
 
 #
-# Security
-#
-org.codice.ddf.security.ecp.enabled=true
-
-#
 # Security Logging
 #
 security.logger.extra_attributes=
 
 
 #
-# IDP (Identity Provider) Settings
-#
-# How long IDP clients should cache the IDP's metadata, ISO 8601 duration format. Default is 7 days.
-org.codice.ddf.security.saml.Metadata.cacheDuration=P7D
-#
-
-#
 # User name for the Karaf local console
 #
 karaf.local.user=admin
 
-#
-# Security properties
-#
-#java.security.policy=_DO_NOT_EXPAND_${karaf.etc}/all.policy
-#org.osgi.framework.security=osgi
-#org.osgi.framework.trust.repositories=_DO_NOT_EXPAND_${karaf.etc}/trustStore.ks
-# pipe (|) separated list of regex patterns for DNs that are allowed to connect to the Security Token Service
-ws-security.subject.cert.constraints=.*CN=_DO_NOT_EXPAND_${org.codice.ddf.system.hostname}.*
 user.language="en"
 user.country="US"
 
@@ -245,10 +200,5 @@ user.country="US"
 # an access exception for being inaccessible.
 #
 org.ops4j.pax.url.mvn.settings=file:_DO_NOT_EXPAND_${user.home}/.m2/settings.xml
-
-#
-# Disable Hazelcast version check
-#
-hazelcast.version.check.enabled=false
 
 #DO NOT REMOVE THIS LINE
