--- a/gitsetup/pom.xml
+++ b/gitsetup/pom.xml
@@ -17,7 +17,7 @@
 
     <parent>
         <groupId>ddf</groupId>
-        <artifactId>ddf</artifactId>
+        <artifactId>ddf-reactor</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
 
