--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ddf</groupId>
-        <artifactId>ddf</artifactId>
+        <artifactId>ddf-reactor</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
     <groupId>ddf.lib</groupId>
