Install profile-standard by default for DDF

--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -45,8 +45,7 @@ featuresRepositories= \
 # to work for the current feature files included in DDF and in the itests. This configuration change
 # to the DDF featuresBoot was made in the Karaf upgrade to 4.1.1.
 #
-# TODO DDF-3072 Investigate improvements of this configuration.
-featuresBoot=(ddf-boot-features)
+featuresBoot=(profile-standard)
 
 #
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
